# cliparser

./: Cargo.toml  README.md  cliparser.go  cliparser_test.go  go.mod
docs/: lib.md
examples/: basic_usage.rs
src/: argument.rs  cli.rs  command.rs  error.rs  errors.rs  flag.rs  lib.rs  parser.rs  ui.rs
src/cli/: mod.rs  tests.rs
src/flag/: mod.rs  tests.rs
src/parser/: mod.rs  tests.rs
tests/: integration_tests.rs
