[package]
name = "cliparser"
version = "0.1.0"
edition = "2024"
description = "Uma biblioteca CLI parser amigável com saída colorida usando ratatui"
license = "MIT"
repository = "https://github.com/rafahgm/cliparser"
authors = ["Rafael Morais <rafahgmorais@gmail.com>"]
keywords = ["cli", "parser", "terminal", "ratatui", "command-line"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
owo-colors = "4.2.2"
serde = {version = "1.0.219", features = ["derive"]}
thiserror = "2.0.14"
